--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3" 
+version: "3"  # optional since v1.27.0
 services:
   csvserver:
     build: .
@@ -6,3 +6,18 @@ services:
       - CSVSERVER_BORDER=Orange
     ports:
       - "9393:9300"
+    links:  
+      - "prometheus"
+    networks:
+      - csv-prometheus
+  prometheus:
+    image: prom/prometheus:v2.22.0
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - csv-prometheus
+networks:
+  csv-prometheus:
+      driver: bridge
